# openpiv-python

./: .buildinfo  .coverage  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  INSTALL  MANIFEST  MANIFEST.in  MILESTONES  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README  README.markdown  README.md  README.rst  TODO  api_reference.html  appveyor.yml  compare_correlations.ipynb  developers.html  downloads_page.html  dummy  environment.yml  faq.html  genindex.html  gui_doc.html  hello.pyx  index.html  installation_instruction.html  introduction.html  makeui.sh  np-modindex.html  objects.inv  openpiv-python-masking.ipynb  poetry.toml  py-modindex.html  pyproject.toml  requirements.txt  (+6 more)
.ci_support/: linux_64_python3.6.____cpython.yaml  linux_64_python3.7.____cpython.yaml  linux_64_python3.8.____cpython.yaml  osx_64_python3.6.____cpython.yaml  osx_64_python3.7.____cpython.yaml  osx_64_python3.8.____cpython.yaml  win_64_python3.6.____cpython.yaml  win_64_python3.7.____cpython.yaml  win_64_python3.8.____cpython.yaml
.github/: copilot-instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml  publish-to-test-pypi.yml  test.yml  testing.yml
_sources/: downloads_page.txt  faq.txt  gui_doc.txt  index.txt  introduction.txt  tutorial.txt
_sources/src/: api_reference.txt  developers.txt  downloads_page.txt  gui_doc.txt  installation_instruction.txt  tutorial.txt
docs/: Makefile  index.rst
docs/src/: downloads_page.rst  installation_instruction.rst  tutorial.rst
masking_tutorial/: masking_tutorial.ipynb  masking_tutorial.py
openpiv/: MANIFEST.in  OpenPIV_windef_func.py  PIV_3D_plotting.py  __init__.py  calib_pinhole.py  calib_polynomial.py  calib_utils.py  deep_refinement.py  filters.py  junk.py  lib.c  lib.py  lib.pyx  new_windef.py  old_windef.py  openpiv  original_windef.py  phase_separation.py  piv.py  preprocess.py  preprocess.py,cover  process.c  process.py  process.pyx  pyprocess.py  pyprocess3D.py  scaling.py  settings.py  smoothn.py  synimagegen.py  test_calib_polynomial.py  tools.py  tools_windef.py  user_interface_window_deformation.py  validation.py  widim.c  widim.pyx  windef.py
openpiv/calib/: calib_utils.py
openpiv/calibration/: __init__.py  _cal_doc_utils.py  _calib_poly.py  _calib_utils.py  _doc_utils.py  _epipolar_utils.py  _marker_detection.py  _match_points.py  _target_grids.py  calib_pinhole.py  calib_polynomial.py  calib_utils.py
openpiv/data/: defaults-processing-parameters.cfg  ui_resources.qrc
openpiv/docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
openpiv/examples/: PIV_3D_example.py
openpiv/masking_tutorial/: masking_tutorial.ipynb
openpiv/mutli-pass_tutorial/: Y4-S3_Camera000399.tif
openpiv/src/: lib.c  lib.pyx  process.c  process.pyx  processFFT.cpp
openpiv/synimage/: __init__.py  simple_synthetic_image_demo.ipynb
openpiv/test/: conftest.py  extended_search_area_vectorized.ipynb  pyprocess_windef.py  run_deep_refinement.ipynb  test_PIV_3D_plotting.py  test_calib_dlt.py  test_calib_pinhole.py  test_calib_point_matching.py  test_calib_polynomial.py  test_calib_target_grids.py  test_calib_utils.py  test_calibration_pinhole_1.txt  test_calibration_pinhole_2.txt  test_calibration_pinhole_3.txt  test_calibration_points.npz  test_calibration_points_pinhole.txt  test_deep_refinement.py  (+30 more)
recipe/: conda_build_config.yaml  meta.yaml
src/: api_reference.html  developers.html  downloads_page.html  gui_doc.html  installation_instruction.html  introduction.html  tutorial.html
synimage/: PIV_experiment_data.npz  Synthetic_Image_Generator_examples.ipynb  synimagegen.py  test_synimagegen.py
tutorial/: mark_2306_multiprocessing.py  tutorial-part1.py
tutorial-part1/: tutorial-part1.py
(+245 files in other folders)
