[tool.poetry]
name = "OpenPIV"
version = "0.25.2"
description = "OpenPIV consists in a Python and Cython modules for scripting and executing the analysis of a set of PIV image pairs. In addition, a Qt and Tk graphical user interfaces are in development, to ease the use for those users who don't have python skills."
authors = ["Alex Liberzon"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "openpiv"}]
classifiers = [
    "Development Status :: 4 - Beta",

    # Sublist of all supported Python versions.
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",

    # Sublist of all supported platforms and environments.
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",

    # Miscellaneous metadata.
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.6"
imageio = "^2.22.4"
matplotlib = "^3"
scikit-image = "^0.19.3"
scipy = "^1.7.3"
natsort = "^8.4.0"
tqdm = "^4.66.1"
importlib_resources = "5.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pypi.org"]
OpenPIV = "OpenPIV"

[tool.poetry.urls]
"Documentation" = "http://openpiv.readthedocs.org"  # Add your documentation URL here
"Repository" = "https://pypi.python.org/pypi/OpenPIV"  # Add your repository URL here
