[tool.poetry]
name = "OpenPIV"
version = "0.25.3"
description = "OpenPIV consists in a Python and Cython modules for scripting and executing the analysis of a set of PIV image pairs. In addition, a Qt and Tk graphical user interfaces are in development, to ease the use for those users who don't have python skills."
authors = ["Alex Liberzon"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "openpiv"}]
classifiers = [
    "Development Status :: 4 - Beta",

    # Sublist of all supported Python versions.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    # Sublist of all supported platforms and environments.
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",

    # Miscellaneous metadata.
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.0.0"
imageio = ">=2.35.0"
matplotlib = ">=3.8.0"
scikit-image = ">=0.23.0"
scipy = ">=1.11.0"
natsort = ">=8.4.0"
tqdm = ">=4.66.0"
importlib_resources = ">=5.12.0"
# Optional dependencies for Deep Refinement
torch = ">=1.10.0"
torchvision = ">=0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pypi.org"]
OpenPIV = "OpenPIV"

[tool.poetry.urls]
"Documentation" = "http://openpiv.readthedocs.org"  # Add your documentation URL here
"Repository" = "https://pypi.python.org/pypi/OpenPIV"  # Add your repository URL here
